<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xiangjibg"
    android:weightSum="1"
    android:fitsSystemWindows="true">
    <com.customview.CommonTitleBar
        android:id="@+id/title_layout"
        style="@style/head_default"
        app:titleTxt="登录" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/text_logo"
        android:id="@+id/imageView2" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d_text2"
        android:textAlignment="center"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/l_username"
        android:layout_width="300dp"
        android:layout_height="41dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/text_round"
        android:hint="@string/d_phone_num"
        android:textSize="20dp"
        android:layout_gravity="center"
        >
    </EditText>
    <EditText
        android:id="@+id/l_userpassword"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:layout_width="300dp"
        android:layout_height="41dp"
        android:background="@drawable/text_round"
        android:hint="@string/d_phone_input"
        android:textSize="20sp"
        android:layout_gravity="center"
        >
    </EditText>
    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round"
        android:text="@string/d_go"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
         />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wangji"/>

        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xinyong"
            android:id="@+id/reg"/>
    </LinearLayout>
</LinearLayout>