<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/homemain2"
    android:orientation="vertical">
<ImageView
    android:id="@+id/login_iv"
    android:layout_gravity="right"
    android:layout_marginRight="35dp"
    android:layout_width="47dp"
    android:layout_height="62dp"
    android:background="@drawable/login1"
    tools:ignore="ContentDescription" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/button"
                android:id="@+id/imageView"
                android:layout_gravity="center"
                tools:ignore="ContentDescription"
                />
            <TextView
                android:textSize="23sp"
                android:text="@string/meihua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_gravity="center"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/button1"
                android:id="@+id/imageView3"
                tools:ignore="ContentDescription"
                android:layout_gravity="center"
                />

            <TextView
                android:textSize="23sp"
                android:text="@string/pintu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/textView2" />

        </LinearLayout>
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:baselineAligned="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/button2"
                android:layout_marginTop="51dp"
                android:id="@+id/imageView4"
                tools:ignore="ContentDescription"
                android:layout_gravity="center"
                />
            <TextView
                android:textSize="23sp"
                android:text="@string/xiangji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_marginTop="7dp"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/button4"
                android:id="@+id/imageView5"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_gravity="center"
                android:textSize="23sp"
                android:text="@string/kefu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                />
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>